# demin-system

./: .gitignore  CLAUDE.md  README.md
apps/workers/: .env.example  README.md  pyproject.toml
apps/workers/kb/: embed_documents.py
apps/workers/monitoring/: auto_pause.py
apps/workers/outreach/: auto_approve.py  auto_pause.py  follow_ups.py  generate_draft.py  send_gmail.py
apps/workers/pipeline/: apollo_enrich.py  auto_replenish.py  classify_descr.py  find_contacts.py  generate_draft.py  ingest_sabi.py  research_prospect.py  scrape_emails.py  verify_emails.py
apps/workers/replies/: classify_replies.py  handle_actions.py  poll_imap.py
apps/workers/scripts/: apply_migration_12.py  apply_migrations.py  audit_fps_classify_descr.py  audit_vercel_env_checklist.py  check_drafts_prod.py  check_hunter_quota.py  check_pipeline_state_prod.py  check_research_state.py  check_smoke_e2e_state.py  check_t3_fit_count.py  cleanup_paso65.py  cleanup_paso66.py  debug_contact_state.py  dump_drafts.py  gmail_oauth_setup.py  hitl_review.py  load_kb_session_1.py  probe_hunter.py  reanalyze_hunter_d20.py  recompute_priorities_paso66.py  seed_kb_dev.py  seed_oauth_token.py  smoke_e2e_paso6.py  smoke_ingest_sabi.py  smoke_kb_retrieval.py  smoke_shared.py  verify_migrations.py
apps/workers/shared/: config.py  db.py  email_finder.py  email_policy.py  gmail_adapter.py  hunter_adapter.py  llm.py
apps/workers/tests/: test_auto_pause.py  test_auto_replenish.py  test_email_finder.py  test_email_policy.py  test_find_contacts.py  test_follow_ups.py  test_generate_draft.py  test_hitl_review.py  (+6 more)
(+119 files in other folders)
