[project]
name = "demin-workers"
version = "0.1.0"
description = "Python workers para el sistema de captación de DEMIN Group"
requires-python = ">=3.11,<3.12"
readme = "README.md"
authors = [
    { name = "Alberto Bueno", email = "albertobueno10@gmail.com" },
]
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "selectolax>=0.3.21",
    "tldextract>=5.1.2",
    "voyageai>=0.3.0",
    "email-validator>=2.2.0",
    "dnspython>=2.6.1",
    "google-api-python-client>=2.130.0",
    "google-auth-oauthlib>=1.2.0",
    "openpyxl>=3.1.5",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
